<resources>
    <string name="app_name">Elfin</string>
    <string name="startMainTitle">Hvor skal du?</string>
    <string name="startSubTitle">Fasiliteter</string>
    <string name="choosenCar">EB 12342  VW e-Golf</string>
    <string name="to">Til:</string>
    <string name="driveNow">Kjør nå</string>
    <string name="thunderCharger">Lynlader</string>
    <string name="wc">Toalett</string>
    <string name="resturant">Restaurant</string>
    <string name="freeParking">Gratis parkering</string>
    <string name="shoppingCenter">Kjøpesenter</string>
    <string name="trondheim">Trondheim</string>
    <string name="search">Søk</string>
    <string name="google_map_api_key">AIzaSyDskTx9G4bXFvfz2T2jMiBtG8UWa5KX3KU</string>
    <string name="nobil_use">64138b17020c3ab35706a48902171429</string>

    <string name="add_car">Legg til bil</string>
   <!-- <string name="manual_selection">eller velg bil manuelt</string> -->
    <string name="car_menu_show">Vis bil</string>
    <string name="car_menu_delete">Slett bil</string>
    <string name="car_menu_delete_all">Slett alle biler</string>
    <!-- Select Car Field -->
    <string name="missing_selection">Fyll inn mangler</string>
    <string name="manual_selection">Velg bil manuelt</string>
    <string name="brand_selection">Velg bilmerke</string>
    <string name="model_selection">Velg bilmodell</string>
    <string name="model_year_selection">Velg årsmodell</string>
    <string name="battery_selection">Velg batterikapasitet</string>
    <string name="fast_charge_selection">Valg ladetype</string>
    <string name="effect_selection">Valg ladehastighet</string>
    <!-- Choose Car Field -->
    <string name="unknown">UKJENT</string>
    <string name="choose_none">(INGEN VALGT)</string>
    <string name="choose_nothing">---VET IKKE---</string>
    <string name="choose_brand">Velg bilmerke</string>
    <string name="choose_model">Velg bilmodell</string>
    <string name="choose_model_year">Velg årsmodell</string>
    <string name="choose_specific_model">Velg spesifikk bilmodell</string>
    <string name="choose_battery">Velg batterikapasitet</string>
    <string name="choose_charging">Velg ladehastighet</string>
    <!-- Chosen Car Field -->
    <string name="chosen_brand">Valgt bilmerke:</string>
    <string name="chosen_model">Valgt bilmodell:</string>
    <string name="chosen_model_year">Valgt årsmodell:</string>
    <string name="chosen_specific_model">Valgt spesifikk bilmodell:</string>
    <string name="chosen_battery">Velgt batterikapasitet:</string>
    <string name="chosen_charging">Velgt ladehastighet:</string>

    <string name="regNrs">
        (KUN HER FOR TESTING)\n
        \nEK 16553\n
        \nEK 95125\n
        \nEV 40392\n
        \nEB 19052\n
        \nEV 34083\n
    </string>


    <string-array name="year_models">
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
